update code and bug fixing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     content="Koda is an AI-powered tech education platform where students learn coding, robotics, and digital skills through gamified adventures. Perfect for ages 6-18." />
   <meta name="theme-color" content="#6366f1" />
 
+  <!-- Space Grotesk Font for Crypto Theme -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+
   <!-- PWA Meta Tags -->
   <!-- PWA Meta Tags - Manifest is injected by vite-plugin-pwa -->
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
